@@ -5,6 +5,7 @@ $Id$
 	ataprint.cpp: Add form factors from ACS-4.
 	Add ACS-2 and ACS-3 minor versions.
 	Update SATA log names.  Add SATA 3.2.
+	Print vendor specific bytes from SCT Status.
 
 2014-10-06  Alex Samorukov  <samm@os2.kiev.ua>
 
